--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ body {
 
 .video__container {
   position: relative;
+  margin-top: 50px;
   width: 250px;
   height: 250px;
   border: 1px solid grey;
@@ -46,12 +47,12 @@ body {
 
 .video__container video {
   width: 100%;
-  height: 100%;
+  height: 85%;
 }
 
 .video__container .settings {
-  height: 15%;
   width: 100%;
+  height: 15%;
   background: #363636;
   display: -webkit-box;
   display: -ms-flexbox;
