--- a/index.scss
+++ b/index.scss
@@ -17,7 +17,7 @@ body{
 .video__container{
     position:relative;
     margin-top: 50px;
-    width:250px;
+    width:210px;
     height:250px;
     border: 1px solid grey;
     display:flex;
@@ -33,9 +33,7 @@ body{
     video{
         width:auto;
         height:85%;
-        border: none !important;
-        outline: none;
-        // background:red;
+        object-fit: cover;
     }
     .settings{
         width:100%;
@@ -98,7 +96,6 @@ body{
         background:lightgrey;
     }
     .none{
-        content: 'noo';
         background:#363636;
     }
     
@@ -111,56 +108,34 @@ body{
         cursor: default !important;
         border-top: 1px solid black;
         pointer-events: none;
-
     }
 }
 
 .loader{
     position:absolute;
-    // background:red;
-    top:50%;
-    left:50%;
+    top:50%; left:50%;
     transform:translate(-50%,-50%);
     width:200px;
     height:200px;
-    align-self: center;
     display:flex;
     justify-content: center;
     align-items: center;
-    font-weight: 700;
-    font-size: 20px;
-    z-index:100;
     background:#363636;
     border-radius: 50%;
-    // border: 20px solid black;
     overflow: hidden;
-    p{
-        color:darkslategrey;
-        letter-spacing: 7px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-
-    }
-    .overflower{
+    *{
         position:absolute;
         border-radius: 50%;
-        z-index: 105;
-        background:white;
-    }
-    .overflower{
-
         height:150px;
         width:150px;
+    }
+    .overflower{
+        background:white;
+        letter-spacing: 4px;
         display:grid;
         place-items: center;
     }
     .spinner{
-        position:absolute;
-        border-radius: 50%;
-        z-index: 105;
-        // background:red;
-        width:150px;
-        height:150px;
-        z-index:102;
         border: 30px solid steelblue;
         border-bottom-color: transparent;
         border-top-color: transparent;
